2014-03-20  Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	Submitted by Morten Engelhardt Olsen <Morten_engelhardt.Olsen@atmel.com>
	Fix for bug #35948: iom32u4.h for ATmega32U4 incorrectly defines Timer 2
	* include/avr/iom32u4.h: Remove timer2 related definitions (TIFR2, TCCR2A,
	TCCR2B, TCNT2, OCR2A and OCR2B)

2014-03-20  Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	Submitted by Barnabas Bodnar, Pitchumani Sivanupandi
	Fix for bug #36053: Declaration of the register USIBR missing for ATtiny 
	2313a/4313
	Fix for bug #35971: attiny4313 (2313a) pin-change interrupts PCINT[0...2]
	vect etc.
	* include/avr/iotn2313a.h: Add USIBR register and bit definitions.
	Update bit definitions for UCSRC, GIFR, GIMSK. Add PCMSK0 and GIFR as
	alias name for PCMSK and EIFR respectively. Add alias names for USART and 
	PCINT interrupt vectors.
	* include/avr/iotn4313.h: Same.

2014-03-20  Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	Submitted by Morten Engelhardt Olsen <Morten_engelhardt.Olsen@atmel.com>
	Fix for bug #38516: Missing TWI and UCSR1D definitions for ATmega16/32 U4
	* include/avr/iom16u4.h: Add TWBR,TWSR,TWAR,TWDR,TWCR,TWAMR and UCSR1D
	register definitions.
	* include/avr/iom32u4.h: Add UCSR1D regiter and bit definitions.

2014-03-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/iom256rfr2.h (PCMSK0_struct): Add missing definition
	* include/avr/imo128rfr2.h (PCMSK0_struct): (Dito.)
	* include/avr/iom64rfr2.h (PCMSK0_struct): (Dito.)

2014-03-18  Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	Submitted by Vishnu KS
	Fix for bug #40595: iotn2313a.h: wrong fuses definitions for High Fuse Byte
	* include/avr/iotn2313a.h: Update high fuse byte definitions.
	* include/avr/iotn4313.h: Same.

2014-03-18  Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	Submitted by Vishnu KS
	Fix for bug #41519: wrong SPM_PAGESIZE definition in iotn[48]8.h
	* include/avr/iotn48.h: update SPM_PAGESIZE to 64
	* include/avr/iotn88.h: Same.
