@@ -486,10 +486,12 @@
 #define MCUCR _SFR_IO8(0x35)
 #define ISC00 0
 #define ISC01 1
+#define BODSE 2
 #define SM0 3
 #define SM1 4
 #define SE 5
 #define PUD 6
+#define BODS 7
 
 #define OCR0A _SFR_IO8(0x36)
 #define OCR0A_0 0
