@@ -21,6 +21,8 @@
   [#41519] wrong SPM_PAGESIZE definition in iotn[48]8.h
   [no-id]  XXX_vect_num not consistent io90pwmx.h, iousbxx6_7.h
   [no-id]  Specialize clock_prescale_set/get for mega hvb devices
+  [no-id]  Update register and bit definitions for tiny 13a/24a/44a/84a,
+           tiny167 and mega328p
 
 * New devices supported:
 
